--- a/GRACE/Searching/Base.lproj/Main.storyboard
+++ b/GRACE/Searching/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18092"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -15,9 +16,49 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.20000000000000001" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="YUs-zY-Fme">
+                                <rect key="frame" x="0.0" y="241.5" width="414" height="413"/>
+                                <color key="tintColor" name="Almond"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="YUs-zY-Fme" secondAttribute="height" multiplier="1:1" id="HM1-g8-8vb"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5dj-dk-e9k">
+                                <rect key="frame" x="91" y="390" width="232.5" height="116"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Searching…" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gKo-Ye-tex">
+                                        <rect key="frame" x="0.0" y="0.0" width="232.5" height="36"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="obs-az-g80">
+                                        <rect key="frame" x="0.0" y="44" width="232.5" height="72"/>
+                                        <string key="text">Can’t find it? 
+Head to the lobby.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="5dj-dk-e9k" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1pY-mS-0wk"/>
+                            <constraint firstItem="YUs-zY-Fme" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1uv-eU-2WM"/>
+                            <constraint firstItem="YUs-zY-Fme" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="MyS-K5-7mV"/>
+                            <constraint firstItem="5dj-dk-e9k" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="a3L-UR-dZI"/>
+                            <constraint firstItem="YUs-zY-Fme" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="hUE-8W-LW3"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="infomationLabel" destination="obs-az-g80" id="TF1-f4-Og3"/>
+                        <outlet property="searchingIndicator" destination="YUs-zY-Fme" id="mls-ln-gGj"/>
+                        <outlet property="statusLabel" destination="gKo-Ye-tex" id="K4U-o7-pIJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -25,6 +66,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="circle.fill" catalog="system" width="128" height="121"/>
+        <namedColor name="Almond">
+            <color red="0.90588235294117647" green="0.84313725490196079" blue="0.75686274509803919" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
