--- a/GRACE/Searching/Base.lproj/Main.storyboard
+++ b/GRACE/Searching/Base.lproj/Main.storyboard
@@ -25,18 +25,18 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5dj-dk-e9k">
-                                <rect key="frame" x="91" y="390" width="232.5" height="116"/>
+                                <rect key="frame" x="20" y="372.5" width="374" height="151.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Searching…" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gKo-Ye-tex">
-                                        <rect key="frame" x="0.0" y="0.0" width="232.5" height="36"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="36"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="obs-az-g80">
-                                        <rect key="frame" x="0.0" y="44" width="232.5" height="72"/>
+                                        <rect key="frame" x="0.0" y="44" width="374" height="107.5"/>
                                         <string key="text">Can’t find it? 
-Head to the lobby.</string>
+Head to a GRACE-compatible lobby.</string>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -49,6 +49,7 @@ Head to the lobby.</string>
                         <constraints>
                             <constraint firstItem="5dj-dk-e9k" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1pY-mS-0wk"/>
                             <constraint firstItem="YUs-zY-Fme" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1uv-eU-2WM"/>
+                            <constraint firstItem="5dj-dk-e9k" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="GYm-od-iGF"/>
                             <constraint firstItem="YUs-zY-Fme" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="MyS-K5-7mV"/>
                             <constraint firstItem="5dj-dk-e9k" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="a3L-UR-dZI"/>
                             <constraint firstItem="YUs-zY-Fme" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="hUE-8W-LW3"/>
