--- a/GRACE/Floor Selection/FloorSelection.storyboard
+++ b/GRACE/Floor Selection/FloorSelection.storyboard
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18092"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -238,6 +238,7 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                 <color key="tintColor" name="Red"/>
                                                 <state key="normal" image="checkmark.circle.fill" catalog="system">
+                                                    <color key="titleColor" name="Green"/>
                                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="80"/>
                                                 </state>
                                                 <connections>
@@ -249,7 +250,7 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                 <color key="tintColor" name="Red"/>
                                                 <state key="normal" image="delete.left.fill" catalog="system">
-                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="80"/>
+                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="40"/>
                                                 </state>
                                                 <connections>
                                                     <action selector="keypadButtonPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="NRx-LI-eLv"/>
@@ -323,6 +324,9 @@
         </namedColor>
         <namedColor name="DarkPurple">
             <color red="0.20000000000000001" green="0.11764705882352941" blue="0.21176470588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Green">
+            <color red="0.80392156862745101" green="0.76470588235294112" blue="0.5725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Red">
             <color red="0.74901960784313726" green="0.2627450980392157" blue="0.25882352941176473" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
