--- a/GRACE/Waiting for Lift/WaitingLift.storyboard
+++ b/GRACE/Waiting for Lift/WaitingLift.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Image references" minToolsVersion="12.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,83 +18,91 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You have choosen" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iFD-Ls-ckd">
-                                <rect key="frame" x="20" y="64" width="250.5" height="38.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="iiq-iD-Ntz">
+                                <rect key="frame" x="162" y="257" width="90.5" height="208.5"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="antenna.radiowaves.left.and.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="QGy-IG-PTI">
+                                        <rect key="frame" x="0.0" y="4" width="90.5" height="63"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="60"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gCS-Gt-5EW">
+                                        <rect key="frame" x="0.0" y="102.5" width="90.5" height="105.5"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <imageReference key="image" image="iphone" catalog="system" symbolScale="default"/>
+                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="90" weight="regular"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You have chosen" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iFD-Ls-ckd">
+                                <rect key="frame" x="20" y="64" width="233" height="38.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Level ___" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U6i-s9-G1H">
-                                <rect key="frame" x="20" y="122.5" width="234" height="65"/>
+                                <rect key="frame" x="20" y="122.5" width="234" height="64.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="54"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0MK-Me-E7e">
-                                <rect key="frame" x="132" y="237.5" width="150" height="150"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="antenna.radiowaves.left.and.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="QGy-IG-PTI">
-                                        <rect key="frame" x="40" y="3.5" width="70" height="68"/>
-                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="QGy-IG-PTI" secondAttribute="height" multiplier="1:1" id="D8d-VH-5pn"/>
-                                            <constraint firstAttribute="width" constant="70" id="cIP-7u-nu0"/>
-                                        </constraints>
-                                    </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gCS-Gt-5EW">
-                                        <rect key="frame" x="25" y="-91.5" width="100" height="433"/>
-                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="gCS-Gt-5EW" secondAttribute="height" multiplier="9:39" id="3xF-c6-7tc"/>
-                                            <constraint firstAttribute="width" constant="100" id="qPR-wc-gps"/>
-                                        </constraints>
-                                        <imageReference key="image" image="iphone" catalog="system" symbolScale="default"/>
-                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="regular"/>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="150" id="0We-gm-XeM"/>
-                                    <constraint firstItem="QGy-IG-PTI" firstAttribute="top" secondItem="0MK-Me-E7e" secondAttribute="top" constant="3" id="Arn-4q-CFl"/>
-                                    <constraint firstItem="QGy-IG-PTI" firstAttribute="centerX" secondItem="0MK-Me-E7e" secondAttribute="centerX" id="Pi4-Fs-8oX"/>
-                                    <constraint firstAttribute="width" secondItem="0MK-Me-E7e" secondAttribute="height" multiplier="1:1" id="RYX-qi-X6L"/>
-                                    <constraint firstItem="gCS-Gt-5EW" firstAttribute="centerY" secondItem="0MK-Me-E7e" secondAttribute="centerY" constant="50" id="SYT-nM-Yd1"/>
-                                    <constraint firstItem="gCS-Gt-5EW" firstAttribute="centerX" secondItem="0MK-Me-E7e" secondAttribute="centerX" id="mFs-Sh-Xwk"/>
-                                </constraints>
-                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Place your device near the lift panel." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gc1-px-oOj">
-                                <rect key="frame" x="20" y="487.5" width="374" height="76.5"/>
+                                <rect key="frame" x="20" y="515.5" width="374" height="76.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D8p-ch-cY2">
-                                <rect key="frame" x="158.5" y="684" width="97" height="51"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cancel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D3v-vh-bwI">
+                                <rect key="frame" x="159" y="792" width="96.5" height="40"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
-                                <state key="normal" title="Cancel"/>
+                                <color key="textColor" name="Red"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" alpha="0.10000000000000001" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D8p-ch-cY2">
+                                <rect key="frame" x="20" y="782" width="374" height="60"/>
+                                <color key="backgroundColor" name="Red"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <state key="normal">
+                                    <color key="titleColor" name="Red"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancelAlert:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="hmQ-pq-P5G"/>
+                                </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="76K-aR-fu5">
+                                <rect key="frame" x="20" y="207" width="89" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="iiq-iD-Ntz" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="1WB-OW-chw"/>
                             <constraint firstAttribute="trailing" secondItem="Gc1-px-oOj" secondAttribute="trailing" constant="20" id="Bxe-8V-B8t"/>
                             <constraint firstItem="U6i-s9-G1H" firstAttribute="top" secondItem="iFD-Ls-ckd" secondAttribute="bottom" constant="20" id="CKU-tB-Epe"/>
-                            <constraint firstItem="0MK-Me-E7e" firstAttribute="top" secondItem="U6i-s9-G1H" secondAttribute="bottom" constant="50" id="GfJ-lv-TYn"/>
-                            <constraint firstItem="Gc1-px-oOj" firstAttribute="top" secondItem="0MK-Me-E7e" secondAttribute="bottom" constant="100" id="Jgh-Ln-1pJ"/>
+                            <constraint firstItem="D3v-vh-bwI" firstAttribute="top" secondItem="D8p-ch-cY2" secondAttribute="top" constant="10" id="N5x-8m-OX5"/>
+                            <constraint firstItem="D3v-vh-bwI" firstAttribute="centerY" secondItem="D8p-ch-cY2" secondAttribute="centerY" id="O9o-aN-1TC"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="D8p-ch-cY2" secondAttribute="bottom" constant="20" id="VbA-fB-VRK"/>
+                            <constraint firstItem="D3v-vh-bwI" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="Y56-al-pBa"/>
                             <constraint firstItem="Gc1-px-oOj" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="YGU-XH-SLd"/>
-                            <constraint firstItem="D8p-ch-cY2" firstAttribute="top" secondItem="Gc1-px-oOj" secondAttribute="bottom" constant="120" id="ZdX-mK-Med"/>
+                            <constraint firstItem="76K-aR-fu5" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="bA1-xe-ZBE"/>
+                            <constraint firstItem="Gc1-px-oOj" firstAttribute="top" secondItem="iiq-iD-Ntz" secondAttribute="bottom" constant="50" id="fEB-u2-eJY"/>
                             <constraint firstItem="Gc1-px-oOj" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" constant="20" id="hzQ-kR-xMt"/>
                             <constraint firstItem="D8p-ch-cY2" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="oaB-Z5-lGf"/>
                             <constraint firstItem="iFD-Ls-ckd" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="qe6-lI-oLj"/>
+                            <constraint firstItem="iiq-iD-Ntz" firstAttribute="top" secondItem="76K-aR-fu5" secondAttribute="bottom" constant="21" id="reZ-xY-eLg"/>
                             <constraint firstItem="iFD-Ls-ckd" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="reh-Jh-gbF"/>
                             <constraint firstItem="U6i-s9-G1H" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="rna-yH-AQo"/>
-                            <constraint firstItem="0MK-Me-E7e" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="row-NS-sAX"/>
+                            <constraint firstItem="D8p-ch-cY2" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="rv8-tP-Q6p"/>
+                            <constraint firstItem="76K-aR-fu5" firstAttribute="top" secondItem="U6i-s9-G1H" secondAttribute="bottom" constant="20" id="zAZ-YL-mH6"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="animationCircle" destination="0MK-Me-E7e" id="q51-Hr-GlI"/>
+                        <outlet property="cancelBtn" destination="D8p-ch-cY2" id="vAq-Vh-i17"/>
                         <outlet property="levelLabel" destination="U6i-s9-G1H" id="YnL-dS-KGC"/>
+                        <outlet property="locationLabel" destination="76K-aR-fu5" id="X3a-VL-DGJ"/>
                         <outlet property="phoneIcon" destination="gCS-Gt-5EW" id="ADO-yJ-LkK"/>
                     </connections>
                 </viewController>
@@ -105,6 +114,9 @@
     <resources>
         <image name="antenna.radiowaves.left.and.right" catalog="system" width="128" height="109"/>
         <image name="iphone" catalog="system" width="108" height="128"/>
+        <namedColor name="Red">
+            <color red="0.74901960784313726" green="0.2627450980392157" blue="0.25882352941176473" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
