added app icon, cleaned up sebas

--- a/GRACE/Searching/Base.lproj/Main.storyboard
+++ b/GRACE/Searching/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5dj-dk-e9k">
-                                <rect key="frame" x="20" y="372.5" width="374" height="151.5"/>
+                                <rect key="frame" x="20" y="390" width="374" height="116"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Searching…" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gKo-Ye-tex">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="36"/>
@@ -33,10 +33,8 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="obs-az-g80">
-                                        <rect key="frame" x="0.0" y="44" width="374" height="107.5"/>
-                                        <string key="text">Can’t find it? 
-Head to a GRACE-compatible lobby.</string>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Head to a GRACE-compatible lobby." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="obs-az-g80">
+                                        <rect key="frame" x="0.0" y="44" width="374" height="72"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
